# ai-company

./: ._remark.md  .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  main.py  pyproject.toml  remark.md  setup_shell.py
ai_company/: ._services  __init__.py
ai_company/adapters/: java_adapter.py  node_adapter.py  python_adapter.py
ai_company/api/: dependencies.py  server.py
ai_company/api/routers/: agent_messages.py  agents.py  builds.py  database.py  files.py  git.py  global_settings.py  project_links.py  project_messages.py  projects.py  requirements.py  skills.py  terminal.py
ai_company/cli/: agent_commands.py  app.py  build_commands.py  project_commands.py  requirement_commands.py
ai_company/core/: config.py  exceptions.py  models.py
ai_company/services/: agent_message_service.py  build_service.py  claude_service.py  db_service.py  git_service.py  project_link_service.py  project_message_template_service.py  project_service.py  requirement_service.py  shared_dir_service.py  skill_service.py  worklog_service.py
docs/: websocket-claude-architecture.md
frontend/: app.js  index.html
