[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ai-company"
version = "0.1.0"
description = "Multi-project AI agent collaboration platform with Claude Code integration"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.34.0",
    "typer>=0.15.0",
    "pydantic>=2.10.0",
    "pydantic-settings>=2.7.0",
    "watchdog>=6.0.0",
    "pyyaml>=6.0.2",
    "rich>=13.9.0",
    "pymysql>=1.1.0",
    "cryptography>=3.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "httpx>=0.27.0",
]

[tool.setuptools]
packages = ["ai_company"]

[project.scripts]
ai-company = "main:app"
